Fix vertical resizing for quirks mode percentage heights.  b=380004  Patch by Daniel Holbert <dholbert@mozilla.com>.  r+sr=dbaron